# subscTracker-be

./: .clinerules  .env  .env.example  .gitignore  README.md  alembic.ini  cloudbuild.yaml  compose.prod.yml  compose.yml  deploy.sh  entrypoint.sh  pyproject.toml  pytest.ini  ruff.toml
.clinerules/: 01-basic.md  02-coding.md  03-code-design.md  04-tdd-workflow.md  05-project-structure.md  06-documentation.md  07-project-rules.md  08-test-list-template.md  99-zunda.md
.devcontainer/: devcontainer.json  docker-compose.yml
app/: __init__.py  config.py  constants.py  database.py  exceptions.py
app/api/: __init__.py
app/common/: __init__.py  auth_middleware.py  config.py  error_handlers.py  errors.py  logging_setup.py  response_utils.py
app/models/: __init__.py  association_tables.py  label.py  subscription.py  user.py
app/repositories/: label_repository.py  subscription_repository.py
app/schemas/: __init__.py
app/services/: __init__.py  auth_service.py  label_service.py  subscription_service.py
docker/: Dockerfile  Dockerfile.oas-bundler  litestream.yml
docs/: MVP-proposal.md  action-flowchart.md  feature-list.md  screen-flow-diagram.md  system-proposal.md
docs/api-tests/: integration-test.http
docs/db/: ER-diagram.md  table-definition.md
docs/openapi/: auth.api.yaml  common.api.yaml  openapi.yaml  settings.api.yaml  subsc.api.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: env.py
scripts/: apply_migrations.sh
tests/: conftest.py  helpers.py
(+57 files in other folders)
